@@ -11,18 +11,26 @@ repositories {
 }
 
 dependencies {
+    implementation("org.junit.jupiter:junit-jupiter:5.8.1")
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.8.1")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.1")
+    testImplementation("org.assertj:assertj-core:3.23.1")
 }
 
 tasks.withType<JavaCompile>().configureEach {
     options.compilerArgs.add("--enable-preview")
 }
 
-
-tasks.getByName<Test>("test") {
+tasks.withType<Test>() {
     useJUnitPlatform()
+    jvmArgs = listOf("--enable-preview")
 }
+
+tasks.withType<JavaExec>() {
+    jvmArgs = listOf("--enable-preview")
+}
+
+
 
 sonarqube {
     properties {
